# research-videogame-platformer

./: .gitignore  AUTHOR.md  README.md
000-notes/: README.md  links.md
001-maths-movement/: .envrc  README.md  pyproject.toml
001-maths-movement/maths_movement/: movement.py  movements.py  skeletons.py  spacetime.py
001-maths-movement/tests_unit/maths_movement/: test_movements.py  test_skeletons.py  test_spacetime.py
002-app-instancestate-sync/: .envrc  Makefile  go.mod
002-app-instancestate-sync/cmd/synctest/: main.go
002-app-instancestate-sync/docs/: README.md
002-app-instancestate-sync/internal/synctest/: comms_channel.go  comms_channel_test.go
