[tool.poetry]
name = "maths_movement"
version = "0.1.0"
description = ""
authors = ["Tommy P. Keane <talk.to.tommypkeane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
semgrep = "^0.84.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8.ini_options]
ignore = "D203"
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
max-complexity = 10

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov"
testpaths = [
    "tests_unit",
]
